Save progress: app scaffold and UI (excluding docs)

--- a/site/index.html
+++ b/site/index.html
@@ -58,8 +58,8 @@
         <br>
         <div id="options">
             <div>
-                <a href="/control.html" target="_blank">Scenario Controls</a>
-                <p>Monitor & Control a Scenario</p>
+                <a href="/control-new.html" target="_blank">Therapist Control (new)</a>
+                <p>Open the therapist control UI (personality & events)</p>
             </div>
             <div>
                 <a href="/scenario.html" target="_blank">Open Scenario</a>
